adding function to edit profile

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="blueBox"></div>
                 <div class="profile-col">
                     <img class="profile-pic" src="./profile-professional.jpg" alt="peter">
-                    <h1 class="name">Peter Liu</h1>
+                    <h1 id="profile-name" class="name">Jane Doe</h1>
                     <div class="profile-location">
                         <img class="map-marker" src="./map-marker.png" alt="map-marker">
                         <h3 class="profile-city">Seattle</h3>
@@ -39,7 +39,7 @@
                     </div>
                     <div class="profile-edit">
                         <img class="gear" src="./gear.png" alt="gear">
-                        <a class="edit-profile" href="#">Edit profile</a>
+                        <a onclick="changeName()" class="edit-profile" href="#">Edit profile</a>
                     </div>
                 </div>
             </div>
@@ -146,6 +146,6 @@
             
         </aside>  
     </div>
-    
+    <script src="./script.js"></script>
 </body>
 </html>
